Attempt to fix nav on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -242,10 +242,17 @@ input[type=submit]:hover {
 	height: auto;
 }
 
-@media only screen and (max-device-width: 736px) {
-	.main-navigation page-header__item {
-		width: 200px !important;
-		margin:0 auto !important;
+@media screen and (max-width: 600px) {
+	.main-navigation page-header__item.responsive {position: relative;}
+	.main-navigation page-header__item.responsive a.navigation-list__item {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.main-navigation page-header__item.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
 	}
 }
 
